# msg-examples

./: .gitignore  AGENTS.md  LICENSE  README.md  main.md  main.py  myst.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
doc/: EXAMPLE_GUIDELINES.md
examples/: index.md  test.ipynb
examples/_template/: README.md  run.py  visualization.ipynb
examples/_template/data/: .gitkeep
examples/_template/images/: .gitkeep
examples/_template/results/: .gitkeep
examples/gmsh_periodic/: periodic.msh
examples/gmsh_t18/: README.md  build_sg.py  convert.py  gmsh_t18.ipynb  gmsh_t18.md  run.py  run_sc.py  sg.msh  sg.sg  sg.sg.ech  sg.sg.k  sg.sg.opt  t18_simple.msh  t18_simple.py  visualization.ipynb
examples/gmsh_t18/results/: t18_results.csv
examples/sg23_udfrc_gmsh_sc/: build_sg.py  sg2d_fm_square.msh
others/: INDEX.md  README_GMSH_FORMATTER.md  gmsh_formatter.py  t18.msh  t18.py  test.ipynb  test_gmsh_formatter.py
scripts/: QUICKSTART.md  example_usage.py  test_format_simple.py
